# adana

./: .clocignore  .dockerignore  .gitignore  .rustfmt.toml  Cargo.toml  Dockerfile  Dockerfile.old  FIXME.md  LICENSE  README.md  README.old.md  TODO.md  build_musl.sh  cloc.sh  coverage.sh  karsherdb.json  release-only-bump.sh  release.sh  rust-toolchain.toml  sample.json
.cargo/: config
.github/: workflows
.github/workflows/: gh-page.yml  latest.yml  publish.yml  publish_crate.yml.disabled  publish_docker.yml  pull_request.yml  release-wasm.yml  release.yml
adana-cache-command/: Cargo.toml
adana-cache-command/src/: cache.rs  lib.rs  os_command.rs  parser.rs  prelude.rs  process.rs  reserved_keywords.rs
adana-db/: Cargo.toml
adana-db/src/: batch.rs  database.rs  file_db.rs  file_lock.rs  in_memory.rs  lib.rs  tree.rs
adana-playground/: README.md  app.js  examples.js  index.html  style.css  update.sh
adana-script/: Cargo.toml
adana-script-core/: Cargo.toml
adana-script-core/src/: lib.rs  primitive.rs
adana-script-core/src/primitive/: core_primitive.rs  json.rs  mod.rs
adana-script-wasm/: Cargo.toml
adana-script-wasm/src/: lib.rs
adana-script-wasm/tests/: web.rs
adana-script/dynamic_lib/example_lib_src/: .gitignore  Cargo.toml
adana-script/examples/: example1.adana  example2.adana
adana-script/file_tests/: string.adana  test1.adana  test2.adana  test_array.adana  test_fizzbuzz.adana  test_fizzbuzz_else.adana  test_if_else.adana  test_recursion.adana  test_simple_array.adana  test_string_arr.adana
adana-script/file_tests/includes/: init.adana  reverse.adana
adana-script/file_tests/includes/deep/: deep.adana
adana-script/src/: ast.rs  compute.rs  lib.rs  parser.rs  prelude.rs  require_dynamic_lib.rs  string_parser.rs
adana-script/src/tests/: array.rs  bitwise.rs  builtin.rs  chaining.rs  drop.rs  dynload.rs  empty_block.rs  examples.rs  foreach.rs  funct.rs  is_type.rs  misc.rs  mod.rs  opassign.rs  parser.rs  range.rs  strings.rs  struc.rs  test_array.rs  test_chaining.rs  test_parser.rs  test_reference.rs  test_scope_ctx.rs  tests_file.rs  unused.rs
adana-shell/: Cargo.toml
adana-shell/src/: args.rs  editor.rs  main.rs
dynamic_lib/example_lib_src/: Cargo.toml
dynamic_lib/example_lib_src/src/: lib.rs
examples/: example2.adana
file_tests/: name.txt  sort.adana  string.adana  test1.karsher  test2.adana  test2.karsher  test_array.adana  test_fizzbuzz.adana  test_fizzbuzz.karsher  test_fizzbuzz_else.adana  test_fizzbuzz_else.karsher  test_fn.adana  test_if_else.karsher  test_multiline.karsher  test_nested.adana  test_nested.karsher  test_recursion.adana  test_string_arr.karsher  testfib.adana  testfib.karsher
file_tests/includes/: init2.karsher  reverse.karsher
file_tests/includes/deep/: deep.karsher
src/: args.rs  cache.rs  editor.rs  main.rs  os_command.rs  parser.rs  prelude.rs  reserved_keywords.rs  utils.rs
src/adana_script/: ast.rs  compute.rs  mod.rs  parser.rs  primitive.rs  require_dynamic_lib.rs  string_parser.rs
src/adana_script/std/: string.adana
src/adana_script/tests/: bitwise.rs  builtin.rs  dynload.rs  examples.rs  foreach.rs  funct.rs  misc.rs  mod.rs  opassign.rs  range.rs  strings.rs  struc.rs  test_array.rs  test_chaining.rs  test_drop.rs  test_parser.rs  test_reference.rs  test_scope_ctx.rs  tests_file.rs  unused.rs
src/adanascript/: compute.rs  parser.rs
src/adanascript/tests/: misc.rs  mod.rs  test_array.rs  tests_file.rs
src/cache_command/: cache.rs  mod.rs  os_command.rs  parser.rs  process.rs
src/calculator/: ast.rs  compute.rs  mod.rs  number.rs  parser.rs  primitive.rs  tests.rs  tests_file.rs
src/db/: batch.rs  database.rs  file_db.rs  file_lock.rs  in_memory.rs  mod.rs  tree.rs
src/karshscript/: ast.rs  compute.rs  mod.rs  parser.rs  primitive.rs  tests.rs  tests_file.rs
src/karshscript/tests/: misc.rs  test_array.rs  tests_file.rs
src/programs/: calc.rs  mod.rs  number.rs  primitive.rs
static_binaries/: adana-0.13.2  adana-0.13.23  adana-0.13.24  adana-0.13.26  adana-0.13.27  adana-0.13.29  adana-0.13.30  adana-0.13.31
