[workspace]
members = [
  "adana-cache-command",
  "adana-db",
  "adana-script",
  "adana-script-core",
  "adana-shell",
]
resolver = "2"

[workspace.package]
version = "0.16.4"
authors = ["Nordine Bittich"]
description = "namespaces aliases for command lines & basic scripting language"
homepage = "https://github.com/nbittich/adana"
repository = "https://github.com/nbittich/adana"
readme = "README.md"
rust-version = "1.75"
edition = "2021"
license = "MIT"
exclude = ["vscode/", "dist/", ".vscode", ".history", ".git", ".github"]

[workspace.dependencies]
anyhow = "1.0.79"
bincode = "1.3.3"
dirs = "5.0.1"                                                               # todo maybe replace by the home crate
log = "0.4.20"
nom = "7.1.3"
libloading = "0.8.1"
nu-ansi-term = "0.50.0"
rustyline = "13.0.0"
rustyline-derive = "0.10.0"
serde = { version = "1.0.196", features = ['serde_derive', 'rc'] }
serde_json = "1.0.113"
slab_tree = "0.3.2"
strum = { version = "0.26.1", features = ["derive"] }
ctrlc = "3.4.2"
env_logger = { version = "0.11.1", default-features = false }
arboard = "3.3.0"
regex = { version = "1.10.3", default-features = false, features = ["std"] }
serial_test = "3.0.0"

# workspace specific libs
adana-script-core = { path = "./adana-script-core" }
adana-script = { path = "./adana-script" }
adana-db = { path = "./adana-db" }
adana-cache-command = { path = "./adana-cache-command" }
