[workspace]
members = [
  "adana-cache-command",
  "adana-db",
  "adana-script",
  "adana-script-core",
  "adana-script-wasm",
  "adana-shell",
]
resolver = "2"

[workspace.package]
version = "0.16.4"
authors = ["Nordine Bittich"]
description = "namespaces aliases for command lines & basic scripting language"
homepage = "https://github.com/nbittich/adana"
repository = "https://github.com/nbittich/adana"
readme = "README.md"
rust-version = "1.75"
edition = "2021"
license = "MIT"
exclude = ["vscode/", "dist/", ".vscode", ".history", ".git", ".github"]

[workspace.dependencies]
wasm-bindgen = { version = "0.2.91" }
console_error_panic_hook = { version = "0.1.7" }

anyhow = "1.0.79"
bincode = "1.3.3"
dirs = "5.0.1"                                                               # todo maybe replace by the home crate
log = "0.4.20"
nom = "7.1.3"
libloading = "0.8.1"
nu-ansi-term = "0.50.0"
rustyline = "13.0.0"
rustyline-derive = "0.10.0"
serde = { version = "1.0.196", features = ['serde_derive', 'rc'] }
serde_json = "1.0.113"
slab_tree = "0.3.2"
strum = { version = "0.26.1", features = ["derive"] }
ctrlc = "3.4.2"
env_logger = { version = "0.11.1", default-features = false }
arboard = "3.3.0"
regex = { version = "1.10.3", default-features = false, features = ["std"] }
serial_test = "3.0.0"
serde-wasm-bindgen = "0.6.3"
# workspace specific libs
adana-script-core = { version = "0.16.4", path = "./adana-script-core" }
adana-script = { version = "0.16.4", path = "./adana-script" }
adana-db = { version = "0.16.4", path = "./adana-db" }
adana-cache-command = { version = "0.16.4", path = "./adana-cache-command" }

# Config for 'cargo dist'
[workspace.metadata.dist]
# The preferred cargo-dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.8.2"
# CI backends to support
ci = ["github"]
# The installers to generate for each app
installers = ["shell"]
# Target platforms to build apps for (Rust target-triple syntax)
targets = ["x86_64-unknown-linux-gnu"]
# Publish jobs to run in CI
pr-run-mode = "plan"

[profile.release]
opt-level = 's'
lto = true      # Link Time Optimization (LTO)

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
