[package]
name = "adana-script-core"
version.workspace = true
authors.workspace = true
description.workspace = true
homepage.workspace = true
repository.workspace = true
readme.workspace = true
rust-version.workspace = true
edition.workspace = true
license.workspace = true
exclude.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow.workspace = true
serde.workspace = true
strum.workspace = true
regex = { workspace = true, default-features = false, features = [
  "std",
  "unicode",
  "unicode-age",
  "unicode-bool",
  "unicode-case",
  "unicode-perl",
  "unicode-gencat",
  "unicode-script",
  "unicode-segment",
] }
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
libloading.workspace = true
