[package]
name = "plugin_example"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["dylib"]

[dependencies]
adana-script-core = { git = "https://github.com/nbittich/adana-script-core.git" }
anyhow = "1.0.75"
